mgmt/in-prod-siem-v2/helm/loki-base/kustomize/tenants/qa-test/collectors/devops-int/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-devops-int
  namespace: tenant-qa-test
  annotations:
    tenant: qa-test
    collector: devops-int
    type: http
spec:
  selector:
    app: http-devops-int
  ports:
  - port: 8080
    targetPort: 8080
